force-app/main/default/objects/DCC_Invoice_Numbers__c/DCC_Invoice_Numbers__c.object-meta.xml
<CustomObject>
    <label>Invoice Number</label>
    <pluralLabel>Invoice Numbers</pluralLabel>
    <description>Captures one or more invoice references against a DCC Case. One record per Case is designated as the Primary Invoice.</description>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Record Name</label>
        <type>AutoNumber</type>
        <displayFormat>INV-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
</CustomObject>