force-app/main/default/objects/DCC_Invoice_Numbers__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <description>Links the Invoice Number to its parent Case. Inherits sharing and enables roll-ups.</description>
    <type>MasterDetail</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Invoice Numbers</relationshipLabel>
    <relationshipName>Invoice_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>