force-app/main/default/objects/DCC_Invoice_Numbers__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <description>Invoice reference value. Used for search and matching logic.</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>