force-app/main/default/objects/DCC_Invoice_Numbers__c/fields/Primary_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Primary_Invoice__c</fullName>
    <label>Primary Invoice</label>
    <description>Identifies the primary invoice for the Case. Only one record per Case should be true.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>