force-app/main/default/objects/DCC_Invoice_Numbers__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <description>Indicates how the invoice record was created. Used for reporting and automation control.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Primary Field</fullName>
            </value>
            <value>
                <fullName>Manually Added</fullName>
            </value>
            <value>
                <fullName>Email Parsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>